Okay now I know there's not a less weird way to do this

--- a/subscribe.html
+++ b/subscribe.html
@@ -1,26 +1,14 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Digital Ethiopicists mailing list.">
-    <title>Ethiopicist // Developer</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
-  </head>
-  <body>
-    <section class="hero is-primary is-fullheight">
-      <div class="hero-body">
-        <div class="container">
-          <h1 class="title">
-            <img src="/assets/images/icon.png"> // Developer Mailing List
-          </h1>
-          <h2 class="subtitle">
-            Subscribe
-          </h2>
-        </div>
-      </div>
-    </section>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+<head>
+	<meta charset="utf-8"/>
+	<title>&quot;subscribe&quot;</title>
+	<meta name="layout" content="&quot;subscribe&quot;"/>
+</head>
+<body>
 
-    {% include footer.html %}
-  </body>
+<p>The Digital Ethiopicists mailing list.</p>
+
+</body>
 </html>
+
